src/objects/Informacion_financiera__c.object
<CustomObject>
    <fields>
        <fullName>Obligaciones_financieras_codeudor1__c</fullName>
        <label>Obligaciones financieras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Obligaciones_financieras_codeudor2__c</fullName>
        <label>Obligaciones financieras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Obligaciones_financieras_codeudor3__c</fullName>
        <label>Obligaciones financieras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otro_ingreso2__c</fullName>
        <label>Otro ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otro_ingreso2_codeudor1__c</fullName>
        <label>Otro ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otro_ingreso2_codeudor2__c</fullName>
        <label>Otro ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otro_ingreso2_codeudor3__c</fullName>
        <label>Otro ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otro_ingreso__c</fullName>
        <label>Otro ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot;&quot;&amp;Owner:User.MiddleName&amp;&quot;&quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntaje_score_central_codeudor1__c</fullName>
        <label>Puntaje score central de riesgo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_score_central_codeudor2__c</fullName>
        <label>Puntaje score central de riesgo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_score_central_codeudor3__c</fullName>
        <label>Puntaje score central de riesgo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_score_central_de_riesgo__c</fullName>
        <label>Puntaje score central de riesgo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radicacion_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Radicación de crédito</label>
        <referenceTo>Radicacion_de_credito__c</referenceTo>
        <relationshipName>Informaciones_financieras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relacion_credito_garantia__c</fullName>
        <formula>Radicacion_de_credito__r.Credito_solicitado_valor_a_financiar__c / Radicacion_de_credito__r.Valor_total_del_inmueble__c</formula>
        <label>Relación crédito garantia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Saldo2__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo2_codeudor1__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo2_prestamo_codeudor1__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo2_prestamo_deudor__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo2_sector_real_codeudor1__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo2_sector_real_deudor__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_codeudor1__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_codeudor2__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_prestamo__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_prestamo_codeudor1__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_prestamo_codeudor2__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_sector_real__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_sector_real_codeudor1__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_sector_real_codeudor2__c</fullName>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tipo_de_proceso_informacion_financiera__c</fullName>
        <label>Tipo de proceso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Carta definitiva</fullName>
                </value>
                <value>
                    <fullName>Aumento de monto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto__c</fullName>
        <formula>TEXT(Radicacion_de_credito__r.Solicitud_de_credito__r.Oportunidad__r.Tipo_de_producto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_egresos__c</fullName>
        <formula>Gastos_personales__c + Gastos_de_arriendo__c + Obligaciones_financieras__c + Descuentos_de_nomina_u_otros_pagos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_egresos_codeudor1__c</fullName>
        <formula>Gastos_personales_codeudor1__c + Gastos_de_arriendo_codeudor1__c + Obligaciones_financieras_codeudor1__c +   Descuentos_de_nomina_u_otros_codeudor1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total egresos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_egresos_codeudor2__c</fullName>
        <formula>Gastos_personales_codeudor2__c + Gastos_de_arriendo_codeudor2__c + Obligaciones_financieras_codeudor2__c +  Descuentos_de_nomina_u_otros_codeudor2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total egresos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_egresos_codeudor3__c</fullName>
        <formula>Gastos_personales_codeudor3__c + Gastos_de_arriendo_codeudor3__c + Obligaciones_financieras_codeudor3__c + Descuentos_de_nomina_u_otros_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ingreso_bruto__c</fullName>
        <formula>Ingreso_actividad_principal__c + Aux_de_alimentacion__c + Horas_extras__c + Otro_ingreso__c + Otro_ingreso2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ingreso bruto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ingreso_bruto_codeudor1__c</fullName>
        <formula>Ingreso_actividad_principal_codeudor1__c + Aux_de_alimentacion_codeudor1__c + Horas_extras_codeudor1__c + Otro_ingreso_codeudor1__c + Otro_ingreso2_codeudor1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ingreso bruto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ingreso_bruto_codeudor2__c</fullName>
        <formula>Ingreso_actividad_principal_codeudor2__c +  Aux_de_alimentacion_codeudor2__c + Horas_extras_codeudor2__c + Otro_ingreso_codeudor2__c + Otro_ingreso2_codeudor2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ingreso bruto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ingreso_bruto_codeudor3__c</fullName>
        <formula>Ingreso_actividad_principal_codeudor3__c + Aux_de_alimentacion_codeudor3__c + Horas_extras_codeudor3__c + Otro_ingreso_codeudor3__c + Otro_ingreso2_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ingreso bruto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ingresos_netos_parciales__c</fullName>
        <formula>Ingreso_neto_parcial__c + Ingreso_neto_parcial_codeudor1__c + Ingreso_neto_parcial_codeudor2__c + Ingreso_neto_parcial_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ingresos netos parciales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_obligaciones_financieras__c</fullName>
        <formula>Obligaciones_financieras__c + Obligaciones_financieras_codeudor1__c + Obligaciones_financieras_codeudor2__c + Obligaciones_financieras_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total obligaciones financieras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_propuesta_ingreso_dispon__c</fullName>
        <formula>Valor_cuota_sugerida__c / Ingreso_bruto_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor cuota propuesta / ingreso dispon.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_solicitada_ingreso_dispon__c</fullName>
        <formula>Cuota_credito_solicitado__c / Total_ingresos_netos_parciales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor cuota solicitada / ingreso dispon.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_sugerida__c</fullName>
        <label>Valor cuota sugerida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo2__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo2_codeudor1__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo2_prestamo_codeudor1__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo2_prestamo_deudor__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo2_sector_real_codeudor1__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo2_sector_real_deudor__c</fullName>
        <label>Valor /cupo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_cupo__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_codeudor1__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_codeudor2__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_prestamo__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_prestamo_codeudor1__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_prestamo_codeudor2__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_sector_real__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cupo_sector_real_codeudor2__c</fullName>
        <label>Valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_total_del_inmueble__c</fullName>
        <label>Valor total del inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cambio_de_condiciones__c</fullName>
        <label>¿Cambio de condiciones?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>valor_cupo_sector_real_codeudor1__c</fullName>
        <label>valor /cupo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Valida_el_consecutivo_de_radiacion</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Radicacion_de_credito__c )</errorConditionFormula>
        <errorMessage>INFOFIN-002 No modificar el consecutivo de la radiación.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_registro_fecha_cambio_condiciones</fullName>
        <active>true</active>
        <description>Si el registro tiene cambio de condiciones debe registrar la fecha</description>
        <errorConditionFormula>AND ( 
  ISPICKVAL ( cambio_de_condiciones__c , &quot;Si&quot;), 
   ISBLANK ( Fecha_cambio_de_condiciones__c )
)</errorConditionFormula>
        <errorDisplayField>Fecha_cambio_de_condiciones__c</errorDisplayField>
        <errorMessage>INFOFIN-001 Si existe cambio de condiciones debe registrar la fecha</errorMessage>
    </validationRules>
</CustomObject>